# GLATasks2

./: .dockerignore  .editorconfig  .env-example  .gitignore  .markdownlint-cli2.jsonc  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  .pylintrc  .textlintrc.yaml  AGENTS.md  CLAUDE.md  CODING-STYLE.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  asgi.py  compose.development.yaml  compose.production.yaml  compose.staging.yaml  compose.yaml  config.py  conftest.py  drizzle.config.ts  eslint.config.js  helpers.py  helpers_test.py  jest.config.ts  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  pyproject.toml  tsconfig.json  vite.config.ts  vitest.config.ts  (+1 more)
.clinerules/: 01-instructions.md  91-projectbrief.md  92-productContext.md  93-activeContext.md  94-systemPatterns.md  95-techContext.md  96-progress.md
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  deploy.yaml  deploy.yml  docs.yaml  publish.yml  python-app.yml  release.yaml  release.yml  test.yml
app/: Dockerfile  asgi.py  asgi_test.py  config.py  conftest.py  helpers.py  helpers_test.py  package.json  svelte.config.js  vite.config.ts  web_utils.py
app/ctl/: auth.py  lists.py  main.py  tasks.py  tasks_test.py
app/data/: .encrypt_key  .secret_key
app/migrations/: env.py  script.py.mako
app/migrations/versions/: 50194d8b6c06_liststatus.py  5ac068d38ce2_init.py  dee28bfaa55e_last_updated.py
app/models/: __init__.py  base.py  list.py  task.py  user.py
app/src/: app.d.ts  app.html
app/src/lib/: beep.test.ts  beep.ts  crypto.test.ts  linkify.test.ts  linkify.ts  query-client.ts  schemas.ts  sse-client.ts  theme.test.ts  theme.ts  timer-utils.test.ts  timer-utils.ts  trpc.ts  types.ts
app/src/lib/components/layout/: AuthCard.svelte  Header.svelte
app/src/lib/components/lists/: ListItem.svelte  ListSidebar.svelte
app/src/lib/components/tasks/: TaskAddForm.svelte  TaskEditDialog.svelte  TaskItem.svelte  TaskList.svelte  TaskListHeader.svelte
app/src/lib/components/timers/: TimerAlarmMonitor.svelte  TimerCard.svelte  TimerCreateDialog.svelte
app/src/lib/server/: api.ts  crypto.ts  db.ts  env.ts  schema.ts  session.test.ts  session.ts  sse.ts  trpc.ts
app/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte  +page.svelte.old
app/src/routes/api/events/: +server.ts
app/src/routes/auth/login/: +page.server.ts  +page.svelte
app/src/routes/auth/logout/: +server.ts
app/src/routes/auth/regist_user/: +page.server.ts  (+1 more)
app/src/routes/healthcheck/: +server.ts
app/src/routes/sw.js/: +server.ts
app/src/routes/timers/: +page.svelte
app/static/: manifest.webmanifest
app/templates/: _layout.html  add.html  error.html  index.html  regist_user.html
app/tests/: global-setup.ts  lists.test.ts  share.test.ts  tasks.test.ts  timers.test.ts
app/views/: auth.py  auth_test.py  lists.py  lists_test.py  main.py  main_test.py  sandbox.py  sandbox_test.py  share.py  tasks.py  tasks_test.py
appjs/: cache.ts  crypto.test.ts  crypto.ts  global.d.ts  jest.setup.ts  list-cache.ts  lists.ts  main.ts  site.css  tailwind.css  task-form.ts  task-operation.ts  tasks.ts  vitest.setup.ts
chrome_extension/: README.md  background.js  manifest.json  popup.html  popup.js
ctl/: auth.py  auth_test.py  lists.py  lists_test.py  main.py  main_test.py  tasks.py  tasks_test.py
db/: my.cnf
docker/: Dockerfile  requirements.txt
docs/: agent-learned.md  architecture.md  astro.config.mjs  coding-style.md  development.md  package.json  pnpm-lock.yaml
docs/src/content/docs/: index.mdx
drizzle/migrations/: 0000_initial.sql  0001_bizarre_chronomancer.sql  0002_dark_whirlwind.sql  0003_sort_order_and_status.sql  0004_add_timer_expired.sql  0005_add_timer_mode.sql
drizzle/migrations/meta/: 0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json
frontend/: eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/: hooks.server.ts
frontend/src/lib/: cache.ts  crypto.ts
frontend/src/lib/server/: api.ts  crypto.ts
frontend/src/routes/: +layout.server.ts  +page.server.ts  +page.svelte
frontend/tests/: auth.test.ts  lists.test.ts  share.test.ts  tasks.test.ts
models/: base.py  task.py  user.py
src/: crypto.test.ts  crypto.ts  global.d.ts  main.ts  task-operation.ts
static/: manifest.webmanifest
static/html/: offline.html
templates/: _layout.html  add.html  index.html  login.html  sw.js
web/: keygen.sh  nginx.conf  openssl.cnf-example
web/static/: manifest.webmanifest
web/static/html/: offline.html
(+19 files in other folders)
